tests/neg/namespace-no-import/main.stk
namespace app

def main =
  test.double 10 p    // error // error
